--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="{{ site.url }}">{{ site.name }}</a>
+          <a class="navbar-brand" href="{{ site.url }}/home">{{ site.name }}</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -43,6 +43,8 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
+          	<li><a href="/index.html">Blog</a></li>
+          	<li><a href="/job">Job</a></li>
 			<li><a href="/contact">Contact</a></li>
           </ul>
 
