--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,28 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="{{ site.description }}">
 	
-	<link href="/css/bootstrap.min.css" rel="stylesheet">
-	<style>
+	<link href="/css/bootstrap.css" rel="stylesheet">
+	<link href="/css/bootswatch.min.css" rel="stylesheet">
+	<!--<style>
 		body {
 			padding-top: 60px;
 		}
-	</style>
-	<link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
-	<script src="/js/jquery-1.9.1.min.js"></script>
+	</style>-->
+	<!--<link href="/css/bootstrap-responsive.min.css" rel="stylesheet">-->
+	<script src="/js/jquery-1.10.2.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
-
-	<script type="text/javascript">
-		$(document).ready(function(){
-			$('a').tooltip('show')
-			$('a').tooltip('hide')
-		});
-	</script>
-	
-	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-
+	<script src="/js/bootswatch.js"></script>
 </head>
 
 <body>
