--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,7 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
           	<li><a href="/index.html">Blog</a></li>
+          	<li><a href="/people">People</a></li>
           	<li><a href="/job">Job</a></li>
 			<li><a href="/contact">Contact</a></li>
           </ul>
