updating copyright notice

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 		
 		<hr>
 	
-		<p>Copyright &copy; 2015 <a href="{{ site.url }}">SMAC Project</a> - <a href="http://my.vanderbilt.edu/stormlab/">STORM Lab</a> at <a href="http://www.vanderbilt.edu">Vanderbilt University</a> - All Rights Reserved</p>
+		<p>Copyright &copy; 2015 <a href="http://my.vanderbilt.edu/stormlab/">STORM Lab</a> - <a href="http://www.vanderbilt.edu">Vanderbilt University</a> - All Rights Reserved</p>
 	</div>
 	
 </body>
