--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,10 @@
 	
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/bootswatch.min.css" rel="stylesheet">
-	<link href="/css/video.css" rel="stylesheet">
 
 	<script src="/js/jquery-1.10.2.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/bootswatch.js"></script>
-	<script src="/js/video.js"></script>
 </head>
 
 <body>
@@ -26,7 +24,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="{{ site.url }}/home">{{ site.name }}</a>
+          <a class="navbar-brand" href="{{ site.url }}">{{ site.name }}</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -35,7 +33,7 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-          	<li><a href="/index.html">Blog</a></li>
+          	<li><a href="#">Blog</a></li>
           	<li><a href="/people">People</a></li>
           	<li><a href="/job">Job</a></li>
 			<li><a href="/contact">Contact</a></li>
