doubled the space for short bio by moving inlining title next to name

--- a/_includes/profiles/eka.html
+++ b/_includes/profiles/eka.html
@@ -27,8 +27,7 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Ekawahyu Susilo</h3>
-				<h4 class="text-muted">Entrepreneurial Lead</h4>
-				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
+				<h3>Ekawahyu Susilo<small> Entrepreneurial&nbspLead</small></h3>
+				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
