--- a/_includes/profiles/pietro.html
+++ b/_includes/profiles/pietro.html
@@ -15,8 +15,7 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Pietro Valdastri</h3>
-				<h4 class="text-muted">Principal Investigator</h4>
-				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
+				<h3>Pietro Valdastri<small> Principal&nbspInvestigator</small></h3>
+				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
