--- a/_includes/profiles/pietro.html
+++ b/_includes/profiles/pietro.html
@@ -16,6 +16,6 @@
 			</div>
 			<div class="col-lg-8">
 				<h3>Pietro Valdastri<small> Principal&nbspInvestigator</small></h3>
-				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
+				<p>Pietro strongly believes that research in engineering must reach the end user to have an impact on society. He also has first-hand experience in start-up business creation. In 2009, he launched <a href="http://www.winmedical.com">Winmedical srl</a>, a med-tech company proposing a patented wearable modular system for continuous monitoring of physiological parameters. The company has 25 employees and is negotiating a potential acquisition with one of the worldwide leaders in medical device manufacturing.</p>
 			</div>
 		</div>
