--- a/_includes/profiles/yasmin.html
+++ b/_includes/profiles/yasmin.html
@@ -9,8 +9,7 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Yasmin Alvarado Rayo</h3>
-				<h4 class="text-muted">Raspberry Pi Developer</h4>
+				<h3>Yasmin Alvarado Rayo<small> Raspberry&nbspPi&nbspDeveloper</small></h3>
 				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
