--- a/_includes/profiles/chris.html
+++ b/_includes/profiles/chris.html
@@ -7,10 +7,15 @@
 						<i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
 					</span>
 				</a>
+				<a href="http://www.linkedin.com/profile/view?id=2132702">
+					<span class="fa-stack">
+						<i class="fa fa-square fa-stack-2x"></i>
+						<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+					</span>
+				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Chris Harris</h3>
-				<h4 class="text-muted">Business Mentor</h4>
-				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
+				<h3>Chris Harris<small> Business&nbspMentor</small></h3>
+				<p>Chris brings a proven track record of exploiting novel technologies for commercial partnership, joint-venture, and technology and product development. His expertise includes evaluating a technology’s technical strength, building key strategies for advancing product development with commercial partners, and negotiating tactical licensing agreements with public research institutions, private companies, and ‘Fortune 5’ corporations.   He is also experienced at working with university start-ups to perform venture assessments and to develop a viable business model.</p>
 			</div>
 		</div>
