--- a/_includes/profiles/jianing.html
+++ b/_includes/profiles/jianing.html
@@ -9,8 +9,7 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Jianing Liu</h3>
-				<h4 class="text-muted">Software Developer</h4>
+				<h3>Jianing Liu<small> Software&nbspDeveloper</small></h3>
 				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
