Updated People page.

--- a/_includes/profiles/ashley.html
+++ b/_includes/profiles/ashley.html
@@ -1,7 +1,7 @@
 		<div class="row">
 			<div class="col-lg-4 text-center">
-				<h3><img class="img-responsive img-circle center-block" width="120" src="/avatar/jianing.jpg"></img></h3>
-				<a href="mailto:jianing.liu@vanderbilt.edu">
+				<h3><img class="img-responsive img-circle center-block" width="120" src="/avatar/ashley.jpg"></img></h3>
+				<a href="mailto:ashley.m.peck@vanderbilt.edu">
 					<span class="fa-stack">
 						<i class="fa fa-square fa-stack-2x"></i>
 						<i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -9,8 +9,8 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Jianing Liu</h3>
-				<h4><small> Software&nbspDeveloper</small></h4>
+				<h3>Ashley Peck</h3>
+				<h4><small> Raspberry&nbspPi&nbspDeveloper</small></h4>
 				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
