--- a/_includes/profiles/chris.html
+++ b/_includes/profiles/chris.html
@@ -15,7 +15,8 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Chris Harris<small> Business&nbspMentor</small></h3>
+				<h3>Chris Harris</h3>
+				<h4><small> Business&nbspMentor</small></h4>
 				<p>Chris brings a proven track record of exploiting novel technologies for commercial partnership, joint-venture, and technology and product development. His expertise includes evaluating a technology’s technical strength, building key strategies for advancing product development with commercial partners, and negotiating tactical licensing agreements with public research institutions, private companies, and ‘Fortune 5’ corporations.   He is also experienced at working with university start-ups to perform venture assessments and to develop a viable business model.</p>
 			</div>
 		</div>
