--- a/_includes/profiles/eka.html
+++ b/_includes/profiles/eka.html
@@ -27,7 +27,8 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Ekawahyu Susilo<small> Entrepreneurial&nbspLead</small></h3>
+				<h3>Ekawahyu Susilo</h3>
+				<h4><small> Entrepreneurial&nbspLead</small></h4>
 				<p>Given more than 8 years of experiences in electronics miniaturization, Eka’s career has been focused on starting a business of low cost, deeply embedded microelectronic manufacturing. He can bring miniaturization technology into a whole new level of modular electronics. Combined this with his passion in open source software movement, he believes that everyone deserves to get their hands on open source miniature electronics. He is very committed to make miniature electronics affordable, scalable, reliable, and most importantly, monetizable!</p>
 			</div>
 		</div>
