--- a/_includes/profiles/marco.html
+++ b/_includes/profiles/marco.html
@@ -15,7 +15,8 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Marco Beccani<small> Hardware&nbspDeveloper</small></h3>
+				<h3>Marco Beccani</h3>
+				<h4><small> Hardware&nbspDeveloper</small></h4>
 				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
