--- a/_includes/profiles/zeke.html
+++ b/_includes/profiles/zeke.html
@@ -9,7 +9,8 @@
 				</a>
 			</div>
 			<div class="col-lg-8">
-				<h3>Zeke Tan<small> Software&nbspDeveloper</small></h3>
+				<h3>Zeke Tan</h3>
+				<h4><small> Software&nbspDeveloper</small></h4>
 				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
