--- a/_includes/profiles/jianing.html
+++ b/_includes/profiles/jianing.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="col-lg-8">
 				<h3>Jianing Liu</h3>
-				<h4><small> Software&nbspDeveloper</small></h4>
+				<h4><small> Web & Software Developer</small></h4>
 				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
 			</div>
 		</div>
