--- a/_includes/profiles/ashley.html
+++ b/_includes/profiles/ashley.html
@@ -11,6 +11,6 @@
 			<div class="col-lg-8">
 				<h3>Ashley Peck</h3>
 				<h4><small> Raspberry&nbspPi&nbspDeveloper</small></h4>
-				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
+				<p>Ashley is a junior at Vanderbilt University, studying mechanical engineering.  She is highly interested in computer science and, in particular, using computer software to aid physical processes.  Ashley offers a comprehensive knowledge of the intersection between computers and mechanics. She aims to go to graduate school to extend her study of robotics.</p>
 			</div>
 		</div>
