--- a/_includes/profiles/yasmin.html
+++ b/_includes/profiles/yasmin.html
@@ -11,6 +11,6 @@
 			<div class="col-lg-8">
 				<h3>Yasmin Alvarado Rayo</h3>
 				<h4><small> Raspberry&nbspPi&nbspDeveloper</small></h4>
-				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
+				<p>Yasmin is currently enrolled as a senior in the Health Science Academy at John Overton High School. She was accepted to the School for Science and Math at Vanderbilt (SSMV), a four-year interdisciplinary and research-centered learning program, her freshman year of high school. She discovered her interest in the engineering field through the SSMV and she hopes to continue to grow her learning experience. </p>
 			</div>
 		</div>
