Fixed broken url.

--- a/_includes/profiles/jianing.html
+++ b/_includes/profiles/jianing.html
@@ -11,6 +11,6 @@
 			<div class="col-lg-8">
 				<h3>Jianing Liu</h3>
 				<h4><small> Web & Software Developer</small></h4>
-				<p>In publishing and graphic design, lorem ipsum is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation.</p>
+				<p>Jianing is a senior at Vanderbilt University. </p>
 			</div>
 		</div>
