--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
                 <!-- Personal Info. -->
                 Written by 
                 <!-- Mugshot. -->
-                <img class="img-circle" width="40" src="{{ author.email | to_gravatar }}" alt="foo}" />
+                <img class="img-circle" width="40" src="{{ author.email | to_gravatar }}" />
                 <a href="{{ author.web }}" target="_blank">{{ author.name }}</a>
             </span>
         {% endif %}
