--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,7 @@ layout: default
 
 <div class="row-fluid">
 	<div class="span8">
-        <br>
-		<h2>{{ page.title }}</h2>
+		<h2><br>{{ page.title }}</h2>
         <!-- Look the author details up from the site config. -->
         {% assign author = site.data.authors[page.author] %}
 
